--- a/style.css
+++ b/style.css
@@ -1,12 +1,3 @@
-/*
-Theme Name: trquastar
-Text Domain: trquastar
-Version: 1.5
-Description: Fancy trquazy dark blue theme
-Tags: responsive, fancy
-Author: Zainab
-*/
-
 @media (min-width: 1281px) {
   footer{
     margin-top: 15%;
@@ -92,7 +83,7 @@ footer{
 .header{
   min-height: 100vh;
   width: 100%;
-  background-image: linear-gradient(rgba(4,9,30,0.7),rgba(4,9,30,0.7)), url(file:///home/chronos/u-ff813e060e527b4b8183c8ace4c1a2fd236ae28c/MyFiles/Downloads/med.svg);
+  background-image: linear-gradient(rgba(4,9,30,0.7),rgba(4,9,30,0.7)), url("blob/main/med.jpg");
   background-position: center;
   background-size: cover;
   position: relative;
