--- a/style.css
+++ b/style.css
@@ -346,7 +346,9 @@ body{
   color: white;
 }
 
-
+input {
+  display: none;
+}
 .panel-heading { 
   margin: 0;
   padding: 20px;
@@ -379,7 +381,27 @@ h4.panel-title {
 
 .panel  {
   background-color:#080036;
+  display: block;
+  cursor: pointer;
+  padding: 10px 10px 10px 30px;
+  position: relative;
+  user-select: none;
  }
+.panel::before {
+    content: "";
+    border-width: 10px;
+    border-style: solid;
+    border-color: transparent transparent 
+  transparent rgb(255, 255, 255);
+    height: 0;
+    font-size: 0;
+    position: absolute;
+    top: 18px;
+    left: 10px;
+    transition: transform 0.5s;
+    transform-origin: 3px center;
+    color: blueviolet;
+}
 .panel-group {
   .panel+.panel {
       margin-top: 0px;
@@ -391,12 +413,35 @@ h4.panel-title {
 .panel-body {
   padding:25px;
   background-color: #46456c;
+  opacity: 1;
+  height: auto;
   }
   .row0{
     display: flex;
     width: 100%;
     color: white;
+    font-size: 26px;
+    overflow: hidden;
+    opacity: 0;
   }
+  .row0::before {
+    content: "";
+    border-width: 10px;
+    border-style: solid;
+    border-color: transparent transparent 
+  transparent rgb(255, 255, 255);
+    height: 0;
+    font-size: 0;
+    position: absolute;
+    top: 18px;
+    left: 10px;
+    transition: transform 0.5s;
+    transform-origin: 3px center;
+    color: blueviolet;
+}
+input:checked ~ label::before {
+    transform: rotate(90deg);
+    color: aquamarine;
 
 
 /* Footer CSS */
